[package]
name = "unselector"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
kube = { version = "1.1.0", optional = true }
k8s-openapi = { version = "0.25.0", features = ["latest"], optional = true }

[features]
default = ["kube-rs"]
kube-rs = ["kube", "k8s-openapi"]
