[package]
name = "unselector"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
kube = { version = "3.1.0", optional = true }
k8s-openapi = { version = "0.27.1", features = ["latest"], optional = true }

[features]
default = ["kube-rs"]
kube-rs = ["kube", "k8s-openapi"]
