[package]
name = "unselector"
version = "0.1.0"
edition = "2024"
description = "A parser for Kubernetes label selectors."
readme = "README.md"
repository = "https://github.com/crust-gather/unselector"
license = "Apache-2.0"
keywords = ["kubernetes", "selector", "parser", "k8s"]
categories = ["parsing"]

[dependencies]
logos = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
kube = { version = "3.1.0", optional = true }
k8s-openapi = { version = "0.27.1", features = ["latest"], optional = true }

[features]
default = ["kube-rs"]
kube-rs = ["kube", "k8s-openapi"]
